# routes/users.js
@@ -2,6 +2,7 @@ const bcrypt = require("bcrypt");
 const router = require("express").Router()
 const User = require("../models/User")
 const Account = require("../models/Account")
+const {verifyToken} = require("../middlewares")
 
 router.post('/', async function (req, res) {
 
@@ -19,17 +20,17 @@ router.post('/', async function (req, res) {
         const user = await new User(req.body).save()
 
         // Create an account for the user
-        const account = await new Account({userId: user.id}).save()
+        await new Account({userId: user.id}).save()
 
     } catch (e) {
 
         // 409 Username already exists
-        if (/E11000.*username.* dup key.*/.test(e.message)) {
+        if (/E11000.username. dup key.*/.test(e.message)) {
             return res.status(409).send({error: 'Username already exists'})
         }
 
         // 400 Required parameter missing
-        if (/User validation failed: .*: Path `.*` is required/.test(e.message)) {
+        if (/User validation failed: .*: Path .* is required/.test(e.message)) {
             return res.status(400).send({error: e.message})
         }
 
@@ -37,6 +38,24 @@ router.post('/', async function (req, res) {
 
     return res.status(201).send('');
 
+})
+
+router.get('/current', verifyToken, async function (req, res) {
+
+    // Retrieve user data from database
+    const user = await User.findOne({_id: req.userId})
+
+    // Get user's account data
+    const accounts = await Account.find({userId: req.userId})
+
+    res.status(200).send(
+        {
+            id: user.id,
+            name: user.name,
+            username: user.username,
+            accounts: accounts
+        }
+    )
 })
 
 module.exports = router
